# lp_solver

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: branded_types_demo.rs  constraint_building.rs  named_brands_demo.rs
src/: coin_cbc.rs  error.rs  gurobi.rs  lib.rs  macros.rs  ops.rs
tests/: solve.rs
