[package]
name = "lp_solver"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = ["Marcos Sartori <marcos.sartori@ncl.ac.uk>"]
license = "MIT OR Apache-2.0"
description = "Type-safe linear-programming model builder with pluggable CBC/Gurobi backends"
repository = "https://github.com/marlls1989/lp_solver"
keywords = ["linear-programming", "optimisation", "cbc", "gurobi", "lp"]
categories = ["mathematics", "science"]
readme = "README.md"

[features]
default = ["coin_cbc"]
coin_cbc = ["dep:coin_cbc"]
# `grb` 3.x requires a Gurobi major-version feature; pin its newest binding
# (`gurobi12`), whose env-creation FFI (GRB*envinternal) links against modern
# Gurobi runtimes (verified locally against Gurobi 13). Building this feature
# needs a Gurobi install discoverable via GUROBI_HOME or `gurobi_cl` on PATH —
# see README.
gurobi = ["dep:grb", "grb/gurobi12"]

[dependencies]
grb = { version = "3", optional = true }
coin_cbc = { version = "0.1.8", optional = true }

# `grb-sys2`'s upstream build script only matches `libgurobi*.so`, so it fails to
# locate `libgurobi*.dylib` on macOS and aborts the build. This fork's build
# script matches the library by regex (incl. `.dylib`) and derives GUROBI_HOME
# from `gurobi_cl` on PATH when unset. Only affects how grb-sys2 is built.
[patch.crates-io]
grb-sys2 = { git = "https://github.com/marlls1989/grb-sys2", branch = "fix-macos-dylib-and-path-autodetect" }
